--- a/Report.tex
+++ b/Report.tex
@@ -7,6 +7,9 @@
 \usepackage{graphicx}
 \usepackage{parskip}
 \usepackage{hyperref}
+\usepackage{csvsimple}
+\usepackage{siunitx,array,booktabs}
+
 
 \pagestyle{myheadings}
 \textwidth 160mm
@@ -68,7 +71,7 @@ As demonstrated in the small example of figure \ref{131}.
 	\label{131}
 \end{figure}%
 
-At this stage, it may be tempting to define the objective function $l$ as \emph{equal} to all $l_k, \ k \in [Y]$ in order to achieve a common minimum load. This however, would actually lead to an infeasible problem for certain cases such as shown in figure\ref{141} below in which all $l_k$ cannot be equal.
+At this stage, it may be tempting to define the objective function $l$ as \emph{equal} to all $l_k, \ k \in [Y]$ in order to achieve a common minimum load. This however, would actually lead to an infeasible problem for many cases such as shown in figure\ref{141} below in which all $l_k$ cannot be equal.
 %\clearpage
 \begin{figure}[htb]
 	\centering
@@ -144,6 +147,13 @@ $\forall i \in [X], k \in [Y], j \in [Z]$, we have,
 \end{align}
 
 \section{Results}
+The following are the results for fixing X=7, Z = 7 and varying $Y \in {\{3,4,5,6,7\}}$.\\
+\begin{center}
+	\csvautobooktabular{record.csv}
+\end{center}
+
+\section{Discussion}
+We can see that as we add more transit nodes between the source and destination nodes that generally the time taken to solve the LP file increases. Also, adding more transit nodes rightly reduces the maximum load. The highest capacity link seems to stay the same as we are only changing the amount of transit nodes the link capacity stays the same and only when we add more nodes does the capacity decrease 
 
 
 
